syntax="proto3";

package object_builder_service;
option go_package="genproto/object_builder_service";

import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";
import "field.proto";
import "relation.proto";

service FieldAndRelationService {
    rpc CreateFieldsAndRelations(CreateFieldsAndRelationsRequest) returns (CreateFieldsAndRelationsResponse) {}
}

message CreateFieldsAndRelationsRequest {
    repeated CreateFieldRequest fields = 1;
    repeated CreateRelationRequest relations = 2;
    message Options {
        int64 commit_id = 1;
        string commit_guid = 2;
        string project_id = 3;
        string table_id = 4;
    }
    Options options = 3;
}

message CreateFieldsAndRelationsResponse {
}