syntax="proto3";

package object_builder_service;
option go_package="genproto/object_builder_service";

import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";
import "table.proto";

service MenuService {
    rpc Create(CreateMenuRequest) returns (Menu) {}
    rpc GetByID(MenuPrimaryKey) returns (Menu) {}
    rpc GetAll(GetAllMenusRequest) returns (GetAllMenusResponse) {}
    rpc Update(Menu) returns (google.protobuf.Empty) {}
    rpc Delete(MenuPrimaryKey) returns (google.protobuf.Empty) {}
    rpc UpdateMenuOrder(UpdateMenuOrderRequest) returns (google.protobuf.Empty) {}
}

message CreateMenuRequest {
    string label = 1;
    string icon = 2;
    string table_id = 3;
    string layout_id = 4;
    string parent_id = 5;
    string type = 6;
    string project_id = 7;
    string microfrontend_id = 8;
    string webpage_id = 9;
}

message Menu {
    string label = 1;
    string icon = 2;
    string table_id = 3;
    string layout_id = 4;
    string parent_id = 5;
    string type = 6;
    string id = 7;
    string project_id = 8;
    string microfrontend_id = 9;
    int32 order = 10;
    string webpage_id = 11;
}

// // if you change this message you must be change Function message in new_function_service's new_function_service.proto 
// message MicroFrontend {
//     string id = 1;
//     string path = 2;
//     string name = 3;
//     string description = 4;
//     string project_id = 5;
//     string function_folder_id = 7;
//     string environment_id = 8;
//     string url = 9;
//     string password = 10;
//     string ssh_url = 11;
// }

message MenuForGetAll {
    string label = 1;
    string icon = 2;
    string table_id = 3;
    string layout_id = 4;
    string parent_id = 5;
    string type = 6;
    string id = 7;
    string project_id = 8;
    google.protobuf.Struct data = 9;
    string microfrontend_id = 10;
    string webpage_id = 11;
}

message GetAllMenusResponse {
    repeated MenuForGetAll menus = 1;
    int32 count = 2;
}

message MenuPrimaryKey {
    string id = 1;
    string project_id = 2;
}

message GetAllMenusRequest {
    int32 offset = 1;
    int32 limit = 2;
    string search = 3;
    string project_id = 4;
    string role_id = 5;
    string parent_id = 6;
}

message UpdateMenuOrderRequest {
    repeated Menu menus = 1;
    string project_id = 2;
}