syntax="proto3";

package query_service;
option go_package="genproto/query_service";

import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";


service FolderService {
  rpc Create(CreateReq) returns (Folder) {}
  rpc GetList(GetListReq) returns (GetListRes) {}
  rpc GetSingle(GetSingleReq) returns (GetSingleRes) {}
  rpc Update(UpdateReq) returns (Folder) {}
  rpc Delete(DeleteReq) returns (google.protobuf.Empty) {}
}


message Folder {
  string id = 1;
  string project_id = 2;
  string title = 3;
  string parent_id = 4;
  string commit_id = 5;
  string version_id = 6;
}

message CreateReq {
  string project_id = 1;
  string title = 2;
  string parent_id = 3;
  string commit_id = 4;
  string version_id = 5;
}

message GetListReq {
  string project_id = 1;
  int32 limit = 2;
  int32 offset = 3;
  string version_id = 4;
}

message GetListRes {
  repeated Folder folders = 1;
  int32 count = 2;
}

message GetSingleReq {
  string id = 1;
  string project_id = 2;
  string version_id = 3;
}

message GetSingleRes {
  repeated Folder folders = 1;
  int32 count = 2;
}

message UpdateReq {
  string id = 1;
  string project_id = 2;
  string title = 3;
  string parent_id = 4;
  string commit_id = 5;
  string version_id = 6;
}

message DeleteReq {
  string id = 1;
  string project_id = 2;
  string version_id = 3;
}